Changing the images and other sections

--- a/frontend/imports/ui/client/footer.html
+++ b/frontend/imports/ui/client/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
   <hr class="hr-footer">
   <footer class="footer">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-md-4">
           <div class="col-md-12">
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </footer>
 </template>
