--- a/frontend/imports/ui/client/headers/messages.html
+++ b/frontend/imports/ui/client/headers/messages.html
@@ -23,7 +23,7 @@
           <span class="close" {{b "click: closeMessage('warning')"}}></span>
         </p>
         <ul>
-          <li><span>Oasis is undergoing alpha testing: Any funds deposited on the exchange could be lost in the event of a security breach.</span>
+          <li><span>HashdefineEX is undergoing alpha testing: Any funds deposited on the exchange could be lost in the event of a security breach.</span>
           </li>
           {{#if not isMatchingEnabled}}
             <li><span>There is no automatic order matching between orders.</span></li>
