--- a/frontend/imports/ui/client/noethereum.html
+++ b/frontend/imports/ui/client/noethereum.html
@@ -1,10 +1,10 @@
 <template name="noEthereum">
     <div class="no-ethereum-section">
-        <img class="img-header-logo" alt="Maker" src="logo.svg">
-        <hr class="horizontal-line">
-        <img class="img-ethereum-logo" alt="Ethereum" src="ethereum-logo.svg">
+        <!-- <img class="img-header-logo" alt="Maker" src="crowdchat_logo_trans.png"> -->
+        <!-- <hr class="horizontal-line"> -->
+        <!-- <img class="img-ethereum-logo" alt="Ethereum" src="crowdchat_logo_trans.png"> -->
         <h2>NOT CONNECTED TO ETHEREUM</h2>
-        <p class="p-not-found">OasisDEX requires an Ethereum client to be running and current. OasisDEX could not detect a client running which probably means it's not installed,
+        <p class="p-not-found">HashdefineEX requires an Ethereum client to be running and current. HashdefineEX could not detect a client running which probably means it's not installed,
             running or is misconfigured.</p>
         <p class="p-use-clients">Please use one of the following clients to connect to Ethereum:</p>
         <div class="div-clients">
@@ -12,17 +12,17 @@
                 <img class="img-logo" alt="Metamask" src="metamask-logo.svg">
                 <h2>METAMASK</h2>
                 <p><span class="align-number"><span class="numberCircle">1</span></span>Install <a class="span-montserrat-semi-bold a-link" href="https://metamask.io/" target="_blank">Metamask</a></p>
-                <p><span class="align-number"><span class="numberCircle">2</span></span>Use Chrome to browse <a class="span-montserrat-semi-bold a-link" href="https://oasisdex.com" target="_blank">https://oasisdex.com</a></p>
+                <p><span class="align-number"><span class="numberCircle">2</span></span>Use Chrome to browse <a class="span-montserrat-semi-bold a-link" href="https://oasisdex.com" target="_blank" style="font-size: 16px;">http://exchange.hashdefine.org</a></p>
             </div>
             <div class="div-mist">
                 <img class="img-logo" alt="Mist" src="mist-logo.svg">
                 <h2>MIST</h2>
                 <p><span class="align-number"><span class="numberCircle">1</span></span>Install and run <a class="span-montserrat-semi-bold a-link" href="https://github.com/ethereum/mist/releases" target="_blank">Mist</a></p>
-                <p><span class="align-number"><span class="numberCircle">2</span></span>Use Mist to browse <a class="span-montserrat-semi-bold a-link" href="https://oasisdex.com" target="_blank">https://oasisdex.com</a></p>
+                <p><span class="align-number"><span class="numberCircle">2</span></span>Use Mist to browse <a class="span-montserrat-semi-bold a-link" href="https://oasisdex.com" target="_blank" style="font-size: 16px;">http://exchange.hashdefine.org</a></p>
             </div>
         </div>
-        <p class="p-connect-geth">While you can also connect with <b>geth</b> or <b>parity</b>, a more advanced configuration is needed. See the
-            <a href="https://github.com/OasisDEX/oasis/wiki#network" target="_blank">OasisDEX documentation</a> for instructions.
-        </p>
+        <!-- <p class="p-connect-geth">While you can also connect with <b>geth</b> or <b>parity</b>, a more advanced configuration is needed. See the
+            <a href="https://github.com/OasisDEX/oasis/wiki#network" target="_blank">HashdefineEX documentation</a> for instructions.
+        </p> -->
     </div>
 </template>
